assets/demos/pipeline/infrastructure/kibana-HTTPRoute.yaml
# This is not currently used
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "kibana.${BASE_EXTERNAL_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: kibana
      # HTTP (not HTTPS) because we terminate on Envoy Gateway
      port: 5601
